# rid3

./: Cargo.toml  LICENSE  README.md  default.nix
assets/kate-syntax/: rust.xml
src/: back_end.rs  demo.rs  glyph.rs  lib.rs  main.rs  window.rs
src/ide/: highlight.rs  rustc.rs
src/ui/: color.rs  dialog.rs  draw.rs  editor.rs  empty.rs  event.rs  flow.rs  layout.rs  menu.rs  mod.rs  render.rs  tab.rs  text.rs  tool.rs
