[package]
name = "r3"
version = "0.0.1"
authors = ["Eduard-Mihai Burtescu <edy.burt@gmail.com>"]

[dependencies]
regex = "*"
regex_macros = "*"
image = "*"

[target.i686-pc-windows-gnu.dependencies]
winapi = "*"
shared_library = "*"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = "*"
shared_library = "*"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston"

[dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"

[dependencies.glium]
git = "https://github.com/tomaka/glium"
features = ["image"]
default_features = false

[dependencies.freetype-rs]
git = "https://github.com/PistonDevelopers/freetype-rs"

[dependencies.pistoncore-window]
git = "https://github.com/PistonDevelopers/window"

[dependencies.fps_counter]
git = "https://github.com/PistonDevelopers/fps_counter"

[[bin]]
name = "rid3"
