[package]
name = "r3"
version = "0.0.1"
authors = ["Eduard-Mihai Burtescu <edy.burt@gmail.com>"]

[dependencies]
regex = "*"
regex_macros = "*"
unicode-width = "*"
time = "*"

image = "*"
freetype-rs = "*"
fps_counter = "*"
glium = "*"

[target.i686-pc-windows-gnu.dependencies]
winapi = "*"
shared_library = "*"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = "*"
shared_library = "*"

[[bin]]
name = "rid3"
